added df ch3 and df ch4 blog

--- a/www/df/df_home.html
+++ b/www/df/df_home.html
@@ -378,7 +378,8 @@ summary {
 <p><a href="df_intro.html">Introduction: Why Data Science Needs Feminism</a></p>
 <p><a href="df_ch1.html">Chapter 1: The Power Chapter</a></p>
 <p><a href="df_ch2.html">Chapter 2: Collect, Analyze, Imagine, Teach</a></p>
-<p>Chapter 3: On Rational, Scientific, Objective Viewpoints from Mythical, Imaginary, Impossible Standpoints (coming soon)</p>
+<p><a href="df_ch3.html">Chapter 3: On Rational, Scientific, Objective Viewpoints from Mythical, Imaginary, Impossible Standpoints</a></p>
+<p><a href="df_ch4.html">Chapter 4: What Gets Counted Counts</a></p>
 
 
 
